--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My First Page, Take 2</title>
+    <title>Student Bio</title>
 </head>
 
 <body>
@@ -13,8 +13,7 @@
     <img src="https://www.bobrosslipsum.com/images/bob-ross-cutout.png">
 
     <p>If we're going to have animals around we all have to be concerned about them and take care of them. Let's have a little bit of fun today. No pressure. Just relax and watch it happen.</p>
-    <p>If we're gonna walk though the woods, we need a little path. I'm going to mix up a little color. We’ll use Van Dyke Brown, Permanent Red, and a little bit of Prussian Blue. And I will hypnotize that just a little bit.
-    </p>
+    <p>If we're gonna walk though the woods, we need a little path. I'm going to mix up a little color. We’ll use Van Dyke Brown, Permanent Red, and a little bit of Prussian Blue. And I will hypnotize that just a little bit.</p>
 
     <h2>Contact Info</h2>
     <p>
@@ -22,3 +21,4 @@
         p: 314-650-1219
     </p>
 </body>
+</html>
